--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.6",
     "react-native-easy-icon": "^1.0.10",
     "react-native-fs": "^2.20.0",
