--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.6",
     "react-native-easy-icon": "^1.0.10",
