--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^2.14.1",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-permissions": "^4.1.1",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "^3.6.1",
@@ -42,6 +43,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "^14.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.0",
